syntax = "proto2";

package server.protobuf.messages;

message FlightStateSnapshotMessage {
    repeated FlightMessage flightMessages = 1;
    optional FeedStatusesMessage statuses = 2;
}

message FlightMessage {
    optional string operator = 1;
    optional string gate = 2;
    optional string stand = 3;
    optional string status = 4;
    optional int32 maxPax = 5;
    optional int32 actPax = 6;
    optional int32 tranPax = 7;
    optional string runwayID = 8;
    optional string baggageReclaimId = 9;
    optional string airportID = 11;
    optional string terminal = 12;
    optional string ICAO = 13;
    optional string IATA = 14;
    optional string origin = 15;
    optional int64 pcpTime = 16;
    optional int64 scheduled = 17;
    optional int64 estimated = 18;
    optional int64 Touchdown = 19;
    optional int64 estimatedChox = 20;
    optional int64 actualChox = 21;
    repeated string feedSources = 23;
    optional int64 carrierScheduled = 24;
    optional int32 apiPax = 25;

    optional int32 FlightID__OLD = 10;
    optional int32 LastKnownPax__OLD = 22;
}

message UniqueArrivalMessage {
    optional int32 number = 1;
    optional string terminalName = 2;
    optional int64 scheduled = 3;
}

message FlightsDiffMessage {
    optional int64 createdAt = 1;
    repeated UniqueArrivalMessage removals = 4;
    repeated FlightMessage updates = 3;

    repeated int32 removals_OLD = 2;
}

message FeedStatusesMessage {
    repeated FeedStatusMessage statuses = 2;
    optional int64 lastSuccessAt = 3;
    optional int64 lastFailureAt = 4;
    optional int64 lastUpdatesAt = 5;

    optional string name__OLD = 1;
}

message FeedStatusMessage {
    optional int64 date = 1;
    optional int32 updates = 2;
    optional string message = 3;
}
