syntax = "proto2";

package server.protobuf.messages;

message QueueLoadsMessage {
    repeated QueueLoadMessage queueLoads = 1;
}

message QueueLoadMessage {
    optional string terminal = 1;
    optional string queue = 2;
    optional int64 minute = 3;
    optional double work = 4;
}
